--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "gatsby-remark-autolink-headers": "^2.1.23",
     "gatsby-remark-copy-linked-files": "^2.1.31",
     "gatsby-remark-images": "^3.1.35",
+    "gatsby-remark-mermaid": "^1.2.0",
     "gatsby-remark-prismjs": "^3.3.25",
     "gatsby-remark-responsive-iframe": "^2.2.28",
     "gatsby-remark-smartypants": "^2.1.17",
     "gatsby-remark-table-of-contents": "0.0.9",
     "gatsby-source-filesystem": "^2.1.40",
-    "gatsby-transformer-remark": "^2.6.39",
+    "gatsby-transformer-remark": "^2.6.48",
     "gatsby-transformer-sharp": "^2.3.7",
     "prismjs": "^1.17.1",
     "react": "^16.12.0",
